Move into a dedicated Packages doc

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -237,7 +237,7 @@ Named entities, such as variables, constants, classes, modules, subs, etc, are
 part of a namespace. Nested parts of a name use C<::> to separate the
 heirarchy. Some examples:
 
-See the L<documentaton on modules|/language/modules> for more details.
+See the L<documentaton on packages|/language/packages> for more details.
 
 
 =head2 Literals
