Removed erroneous use of "so"

--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -98,8 +98,8 @@ C<none>-L<Junction|/type/Junction> from it.
 
 Interprets the invocant as a list, and returns that L<List|/type/List>.
 
-    say so 42.list.^name;           # List
-    say so 42.list.elems;           # 1
+    say 42.list.^name;           # List
+    say 42.list.elems;           # 1
 
 =head2 method flat
 
