Add documentation for Promise.at

--- a/Type/Promise.pod
+++ b/Type/Promise.pod
@@ -74,6 +74,17 @@ Creates a new Promise that will be kept in C<$seconds> seconds, or later.
 
     await $p;   # wait here until the 5 seconds are over
 
+=head2 method at
+
+    method at(Promise:U: $time, :$scheduler = $*SCHEDULER) returns Promise:D
+
+Creates a new Promise that will be kept at the given time, or later.
+
+    my $p = Promise.at(now + 5).then({ say "5 seconds later" });
+    # do other stuff here
+
+    await $p;   # wait here until the 5 seconds are over
+
 =head2 method allof
 
     method allof(Promise:U: *@promises) returns Promise:D
