--- a/Language/packages.pod
+++ b/Language/packages.pod
@@ -1,8 +1,8 @@
 =begin pod
 
-=TITLE Packages and Namespaces
+=TITLE Packages
 
-=SUBTITLE Creating and referencing things
+=SUBTITLE Organizing and referencing namespaced program elements
 
 =begin comment
 
@@ -11,10 +11,15 @@
 
 =end comment
 
-=head2 Names
+Packages are nested namespaces of named program elements. Modules, classes,
+grammars, and others are types of packages. Like files in a directory, you can
+generally refer to named elements with their short-name if they are local, or
+with a longer name to disambiguate.
 
-A I<name> is anything that is a legal part of a variable name (not counting
-the sigil).  This includes
+=head1 Names
+
+A I<name> is anything that is a legal part of a variable name (not counting the
+sigil). This includes:
 
     $foo                # simple identifiers
     $Foo::Bar::baz      # compound identifiers separated by ::
@@ -22,17 +27,9 @@ the sigil).  This includes
     $42                 # numeric names
     $!                  # certain punctuational variables
 
-When not used as a sigil, the semantic function of C<::> within a name is to
-force the preceding portion of the name to be considered a package through
-which the subsequent portion of the name is to be located.  If the preceding
-portion is null, it means the package is unspecified and must be searched
-for according to the nature of what follows.  Generally this means that an
-initial C<::> following the main sigil is a no-op on names that are known at
-compile time, though C<::()> can also be used to introduce an interpolation
-(see below).  Also, in the absence of another sigil, C<::> can serve as its
-own sigil indicating intentional use of a not-yet-declared package name.
+C<::> is used to separate nested package names.
 
-=head3 Package-qualified names
+=head2 Package-qualified names
 
 Ordinary package-qualified names look like:
 
@@ -45,7 +42,14 @@ alternate way to write this is:
 
 This is resolved at compile time because the variable name is a constant.
 
-=head3 Pseudo-packages
+If the name part before C<::> is null, it means the package is unspecified and
+must be searched for. Generally this means that an initial C<::> following the
+main sigil is a no-op on names that are known at compile time, though C<::()>
+can also be used to introduce an interpolation. Also, in the absence of another
+sigil, C<::> can serve as its own sigil indicating intentional use of a
+not-yet-declared package name.
+
+=head1 Pseudo-packages
 
 The following pseudo-package names are reserved at the front of a name:
 
@@ -70,25 +74,27 @@ anywhere in a name:
     PARENT      # Symbols in this package's parent package (or lexical scope)
     CLIENT      # The nearest CALLER that comes from a different package
 
-The file's scope is known as C<UNIT>, but there are one or more lexical
-scopes outside of that corresponding to the linguistic setting (often known
-as the prelude in other cultures).  Hence, the C<SETTING> scope is
-equivalent to C<UNIT::OUTERS>.  For a standard Perl program C<SETTING> is the
-same as C<CORE>, but various startup options (such as C<-n> or C<-p>) can
-put you into a domain specific language, in which case C<CORE> remains the
-scope of the standard language, while C<SETTING> represents the scope
-defining the DSL that functions as the setting of the current file.  When used
-as a search term in the middle of a name, C<SETTING> includes all its outer scopes
-up to C<CORE>.  To get I<only> the setting's outermost scope, use C<UNIT::OUTER> instead.
+The file's scope is known as C<UNIT>, but there are one or more lexical scopes
+outside of that corresponding to the linguistic setting (often known as the
+prelude in other cultures). Hence, the C<SETTING> scope is equivalent to
+C<UNIT::OUTERS>. For a standard Perl program C<SETTING> is the same as C<CORE>,
+but various startup options (such as C<-n> or C<-p>) can put you into a domain
+specific language, in which case C<CORE> remains the scope of the standard
+language, while C<SETTING> represents the scope defining the DSL that functions
+as the setting of the current file. When used as a search term in the middle of
+a name, C<SETTING> includes all its outer scopes up to C<CORE>. To get I<only>
+the setting's outermost scope, use C<UNIT::OUTER> instead.
 
-=head3 Interpolating into names
+=head1 Looking up names
+
+=head2 Interpolating into names
 
 You may interpolate a string into a package or variable name using
-C<::($expr)> where you'd ordinarily put a package or variable name.  The
+C<::($expr)> where you'd ordinarily put a package or variable name. The
 string is allowed to contain additional instances of C<::>, which will be
-interpreted as package nesting.  You may only interpolate entire names,
+interpreted as package nesting. You may only interpolate entire names,
 since the construct starts with C<::>, and either ends immediately or is
-continued with another C<::> outside the parens.  Most symbolic references
+continued with another C<::> outside the parens. Most symbolic references
 are done with this notation:
 
     $foo = "Bar";
@@ -104,17 +110,17 @@ are done with this notation:
     $::($foo)::Bar::baz # $Bar::Bar::baz
     $::($foobar)baz     # ILLEGAL at compile time (no operator baz)
 
-Note that unlike in Perl 5, initial C<::> doesn't imply global.  Here as part
-of the interpolation syntax it doesn't even imply package.  After the
-interpolation of the C<::()> component, the indirect name is looked up exactly
-as if it had been there in the original source code, with priority given first
-to leading pseudo-package names, then to names in the lexical scope (searching
-scopes outwards, ending at C<CORE>). The current package is searched last.
+An initial C<::> doesn't imply global. Here as part of the interpolation syntax
+it doesn't even imply package. After the interpolation of the C<::()>
+component, the indirect name is looked up exactly as if it had been there in
+the original source code, with priority given first to leading pseudo-package
+names, then to names in the lexical scope (searching scopes outwards, ending at
+C<CORE>). The current package is searched last.
 
-Use the C<MY> pseudopackage to limit the lookup to the current lexical
-scope, and C<OUR> to limit the scopes to the current package scope.
+Use the C<MY> pseudopackage to limit the lookup to the current lexical scope,
+and C<OUR> to limit the scopes to the current package scope.
 
-=head3 Direct lookup
+=head2 Direct lookup
 
 To do direct lookup in a package's symbol table without scanning, treat the
 package name as a hash:
@@ -123,17 +129,13 @@ package name as a hash:
     PROCESS::<$IN>      # Same as $*IN
     Foo::<::Bar><::Baz> # same as Foo::Bar::Baz
 
-The C<::> before the subscript is required here, because the
-C<Foo::Bar{...}> syntax is reserved for attaching a "WHENCE" initialization
-closure to an autovivifiable type object.  (see S12).
-
 Unlike C<::()> symbolic references, this does not parse the argument for
-C<::>, nor does it initiate a namespace scan from that initial point.  In
+C<::>, nor does it initiate a namespace scan from that initial point. In
 addition, for constant subscripts, it is guaranteed to resolve the symbol at
 compile time.
 
-The null pseudo-package is reserved to mean the same search list as an
-ordinary name search.  That is, the following are all identical in meaning:
+The null pseudo-package is the same search list as an ordinary name search.
+That is, the following are all identical in meaning:
 
     $foo
     $::{'foo'}
@@ -141,7 +143,7 @@ ordinary name search.  That is, the following are all identical in meaning:
     $::<foo>
     ::<$foo>
 
-That is, each of them scans lexical scopes outward, and then the current
+Each of them scans lexical scopes outward, and then the current
 package scope (though the package scope is then disallowed when "strict" is
 in effect).
 
@@ -154,20 +156,20 @@ either of:
 You can also use the C<< ::<> >> form as long as there are no spaces in the
 name.
 
-=head3 Package lookup
+=head2 Package lookup
 
 Subscript the package object itself as a hash object, the key of which is
-the variable name, including any sigil.  The package object can be derived
+the variable name, including any sigil. The package object can be derived
 from a type name by use of the C<::> postfix:
 
     MyType::<$foo>
 
-=head3 Globals
+=head1 Globals
 
-Interpreter globals live in the C<GLOBAL> package.  The user's program
+Interpreter globals live in the C<GLOBAL> package. The user's program
 starts in the C<GLOBAL> package, so "our" declarations in the mainline code
-go into that package by default.  Process-wide variables live in the
-C<PROCESS> package.  Most predefined globals such as C<$*UID> and C<$*PID>
+go into that package by default. Process-wide variables live in the
+C<PROCESS> package. Most predefined globals such as C<$*UID> and C<$*PID>
 are actually process globals.
 
 =end pod
