Actually provide a few random examples

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -237,6 +237,11 @@ Named entities, such as variables, constants, classes, modules, subs, etc, are
 part of a namespace. Nested parts of a name use C<::> to separate the
 heirarchy. Some examples:
 
+    $foo                # simple identifiers
+    $Foo::Bar::baz      # compound identifiers separated by ::
+    $Foo::($bar)::baz   # compound identifiers that perform interpolations
+    Foo::Bar::bob(23)   # function invocation given qualified name
+
 See the L<documentaton on packages|/language/packages> for more details.
 
 
