doc Any::reverse

--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -101,6 +101,28 @@ Interprets the invocant as a list, and returns that L<List|/type/List>.
     say 42.list.^name;           # List
     say 42.list.elems;           # 1
 
+=head2 routine reverse
+
+Defined as:
+
+    multi sub    reverse(*@list ) returns List:D
+    multi method reverse(List:D:) returns List:D
+
+Usage:
+
+    reverse(LIST)
+    LIST.reverse
+
+Returns a list with the same elements in reverse order.
+
+Note that C<reverse> always refers to reversing elements of a list;
+to reverse the characters in a string, use L<flip>.
+
+Examples:
+
+    say <hello world!>.reverse      #  world! hello
+    say reverse ^10                 # 9 8 7 6 5 4 3 2 1 0
+
 =head2 method flat
 
 Interprets the invocant as a list, flattens it, and returns that list.
