make $*OUT & friends more discoverable for google
by mentioning their more common names "stdout" and such.

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -870,11 +870,11 @@ Other compile-time variables:
     ==
     @*ARGS             Arguments from the command line.
     ==
-    $*IN               Standard input filehandle.
+    $*IN               Standard input filehandle, AKA stdin
     ==
-    $*OUT              Standard output filehandle.
+    $*OUT              Standard output filehandle, AKA stdout
     ==
-    $*ERR              Standard error filehandle.
+    $*ERR              Standard error filehandle, AKA stderr
     ==
     @*INC              Each repository is represented as an object with the CompUnitRepo
                        interface in the @*INC array
