Remove @*INC from language/variables.pod. Replaced with a small description about REPO

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -876,8 +876,7 @@ Other compile-time variables:
     ==
     $*ERR              Standard error filehandle, AKA stderr
     ==
-    @*INC              Each repository is represented as an object with the CompUnitRepo
-                       interface in the @*INC array
+    $*REPO             A variable holding information about modules installed/loaded
     ==
     $*TZ               The system's local timezone.
     ==
