Add actual code examples for like/unlike

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -212,12 +212,16 @@ strings, such as C<'=='> or C<'~~'>.
 
 =item like($obtained, $expected-regex, $description?)
 
+    like 'foo', /fo/, 'foo looks like fo';
+
 Marks a test as passed if the C<$obtained> C<Str> matches the
 C<$expected-regex>.  The function accepts an optional C<$description> of the
 test.  The regex to match can be either a pre-declared C<Regex> object or
 defined directly in the argument to C<like>.
 
 =item unlike($obtained, $expected-regex, $description?)
+
+    unlike 'foo', /bar/, 'foo does not look like bar';
 
 Marks a test as failed if the C<$obtained> C<Str> matches the
 C<$expected-regex>.  The function accepts an optional C<$description> of the
