Adjusted entry on <fc> in 5to6-perlfunc to reflect that it is now implemented

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -408,7 +408,7 @@ Same as in Perl 5, but can also be used as a method: C<5.exp>;
 
 =item fc EXPR
 
-Looks like it would do the same thing as in Perl 5... if it were implemented.
+Looks like it does the same thing as in Perl 5.
 
 =head2 fcntl
 
