--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -269,6 +269,14 @@ C<$description> of the test.
     my $eulers-constant-approx = 2.71828;
     is-approx($eulers-constant-approx, e, "approximate Euler's constant");
 
+=head2 Module loading testing
+
+=item use-ok($module)
+
+Marks a test as passed if the given C<$module> is correctly loaded.
+
+    use-ok('Full::Qualified::ModuleName');
+
 =head2 Class membership testing
 
 =item isa-ok($object, $type, $description?)
