Fix a missing link

--- a/Type/Code.pod
+++ b/Type/Code.pod
@@ -76,7 +76,7 @@ Usage:
 
     CODE.signature
 
-Returns the C<Signature> object for this code object, which describes
+Returns the L<C<Signature>> object for this code object, which describes
 its parameters.
 
 =head2 method Str
