Add the C<@> and C<%> anonymous state variables
Thanks to lucasb++ for pointing out that they do indeed exist :)

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -644,6 +644,97 @@ two
 three
 =end code
 
+=head3 The C<@> Variable
+
+In a similar manner to the C<$> variable there is also a L<Positional>
+anonymous state variable C<@> :
+
+=begin code
+sub foo($x) {
+    say (@).push($x);
+}
+
+foo($_) for ^3;
+=end code
+
+Produces:
+
+=begin code
+[0]
+[0 1]
+[0 1 2]
+=end code
+
+The C<@> here is parenthesized in order to disambiguate the expression
+from a class member variable named C<@.push>.  Indexed access doesn't
+require this disambiguation but you will need to copy the value in order
+to do anything useful with it:
+
+=begin code
+sub foo($x) {
+    my $v = @;
+    $v[$x] = $x;
+    say $v;
+}
+
+foo($_) for ^3;
+=end code
+
+Produces:
+
+=begin code
+[0]
+[0 1]
+[0 1 2]
+=end code
+
+As with C<$> each mention of C<@> in a scope introduces a new anonymous
+array.
+
+=head3 The C<%> Variable
+
+Finally there is also an L<Associative> anonymous state variable C<%>:
+
+=begin code
+sub foo($x) {
+    say (%).push($x => $x);
+}
+
+foo($_) for ^3;
+=end code
+
+Which produces:
+
+=begin code
+0 => 0
+0 => 0, 1 => 1
+0 => 0, 1 => 1, 2 => 2
+=end code
+
+The same caveat about disambiguation applies. As you may expect, indexed
+access is also possible (with copying to make it useful):
+
+=begin code
+sub foo($x) {
+    my $v = %;
+    $v{$x} = $x;
+    say $v;
+}
+
+foo($_) for ^3;
+=end code
+
+Which produces:
+
+=begin code
+0 => 0
+0 => 0, 1 => 1
+0 => 0, 1 => 1, 2 => 2
+=end code
+
+As with the other anonymous state variables each mention of C<%> within a
+given scope will effectively introduce a separate variable.
+
 =head2 The C<augment> Declarator
 
 With C<augment>, you can add attributes and methods to existing classes and
