--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -970,6 +970,7 @@ the block to the caught exception.
     &?ROUTINE   Which routine am I in?
     &?BLOCK     Which block am I in?
     %?LANG      What is the current set of interwoven languages?
+    %?RESOURCES The files associated with the "Distribution" of the current compilation unit.
 
 Other compile-time variables:
 
