update doc for nl-in and nl-out

--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -433,7 +433,7 @@ C<$*IN.nl-in>.
 
 =item $\
 
-This is accessed through the C<.nl-in> method on the filehandle. E. g.
+This is accessed through the C<.nl-out> method on the filehandle. E. g.
 C<$*OUT.nl-out>.
 
 =item $OUTPUT_AUTOFLUSH
