--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -36,7 +36,7 @@ Returns L<Bool::True> if the read operations have exhausted the content of the f
     method lines($limit = Inf)
 
 Return a lazy list of the file's lines read via L<get>, limited to C<$limit> lines.
-The new line separator (e.g. $*IN.nl) will be excluded.
+The new line separator (e.g. $*IN.nl-in) will be excluded.
 
     =for code :allow<B>
     my @data;
