Add method flush

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -162,6 +162,12 @@ Will close a previously opened filehandle.
 
     $fh.close;
 
+=head2 method flush
+
+Will flush the filehandle to disk.
+
+    $fh.flush;
+
 =head1 Related roles and classes
 
 See also the related role L<IO> and the related class L<IO::Path>.
