add trap of adverb precedence

--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -220,6 +220,16 @@ which is equivalent to
 
 Here, C<tc> means "title case".
 
+=head1 Adverbs and Precedence
+
+Adverbs do have a precedence that may not follow the order of operators that is displayed on your screen. If two operators of equal precedence are followed by an adverb it will pick the first operator it find in the abstract syntax tree. Use paranteses to help Perl 6 to understand what you mean or use operators with looser precedence.
+
+    my %x = a => 42; 
+    say !%x<b>:exists;            # dies with X::AdHoc
+    say !(%x<b>:exists);          # this works
+    say not %x<b>:exists;         # works too
+    say True unless %x<b>:exists; # avoid negation altogether
+    
 =end pod
 
 # vim: expandtab shiftwidth=4 ft=perl6
