Variable next to text inclusion

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -618,6 +618,10 @@ translation.
 In scalar context, C<..> and C<...> were the little-known Flipflop
 operators. They have been replaced by C<ff> and C<fff>.
 
+=head3 String interpolation
+
+In Perl 5, C<"${foo}s"> deliminates a variable name from regular text next to it.
+In Perl 6, simply extend the curly braces to include the sigil too: C<"{$foo}s">
 
 =head2 Compound Statements
 
