Add another example ugexe++

--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -226,8 +226,9 @@ Adverbs do have a precedence that may not follow the order of operators that is 
 
     my %x = a => 42; 
     say !%x<b>:exists;            # dies with X::AdHoc
-    say !(%x<b>:exists);          # this works
-    say not %x<b>:exists;         # works too
+    say %x<b>:!exists;            # this works
+    say !(%x<b>:exists);          # works too
+    say not %x<b>:exists;         # works as well
     say True unless %x<b>:exists; # avoid negation altogether
     
 =end pod
