--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -123,6 +123,17 @@ Examples:
     say <hello world!>.reverse      #  world! hello
     say reverse ^10                 # 9 8 7 6 5 4 3 2 1 0
 
+=head2 method sort
+
+Sorts iterables with C<infix:<cmp>> or given code object.
+
+Examples:
+
+    say <b c a>.sort;                           # a b c
+    say 'bca'.comb.sort.join;                   # abc
+    say 'bca'.comb.sort({$^b cmp $^a}).join;    # cba
+    say '231'.comb.sort(&infix:«<=>»).join;     # 123
+
 =head2 method flat
 
 Interprets the invocant as a list, flattens it, and returns that list.
