--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -96,11 +96,73 @@ which prints
 and is in alphabetical order as desired.  To achieve this result, we sorted
 the hash of vowels by key (C<%vowels.sort(*.key)>) which we then ask for its
 keys and values by applying the C<.kv> method to each element via the unary
-C< >> > hyperoperator.  The output of this operation is a C<Parcel>, the
+C< >> > hyperoperator.  The output of this operation is a L<Seq>, the
 items of which need to be passed into the C<for> loop's block as arguments,
-hence the need to wrap the key/value pairs in parentheses.  Wrapping the
-C<for> loop's input in parentheses is not normally necessary when the input
-is a C<List>.
+which is why you will find the key/value pairs wrapped in parentheses. The signature
+of the point block could also be a single argument.
+
+  for %vowels.kv -> $vowel {
+    say $vowel;
+  }
+
+This would print the list one line at a time.
+
+
+=head2 Object hashes and type constraints
+
+Hash keys are stored as L<Str> values in a normal hash. In many cases this is
+sufficient, but sometimes you want the hash to preserve the objects you are using
+as keys I<as the *exact* objects you are providing to the hash to use as keys>.
+In these moments you want an object hash!
+
+  my %intervals{Instant};
+  my $first-instant = now;
+  %intervals{ $first-instant } = "Our first milestone.";
+  sleep 1;
+  my $second-instant = now;
+  %intervals{ $second-instant } = "Logging this Instant for spurious raisins.";
+  for %intervals.kv.sort(* cmp *) -> (Instant $instant, $note) {
+    state $last-instant //= $instant;
+    say "We noted '$note' at $instant, with an interval of {$instant - $last-instant}";
+  }
+
+This example uses an object hash that only accepts keys of type L<Instant> to
+implement a rudimentary, yet type-safe, logging mechanism. We utilize a named L<state>
+variable for keeping track of the previous C<Instant> so that we can provide an interval.
+
+The whole point of object hashes is to keep keys as objects-in-themselves.
+Currently object hashes utilize the L<WHICH> method of an object, which returns a
+unique identifier for every mutable object. This is the keystone upon which the object
+identity operator (L<===>) rests. Order and containers really matter here as the order of
+C<.keys> is undefined nor is one anonymous list ever L<===> to another.
+
+  > ($first-instant, $second-instant) ~~ %intervals.keys
+  False
+  > ($first-instant, $second-instant) ~~ %intervals.keys.sort(* cmp *)
+  True
+  > ($first-instant, $second-instant) === %intervals.keys.sort(* cmp *)
+  False
+  > $first-instant === %intervals.keys.sort(* cmp *).index(0)
+  True
+
+Since C<Instant> defines its own comparison methods, in our example a sort according to
+L<cmp> will always provide the earliest instant object as the first element in the L<List>
+it returns.
+
+If you would like to accept any object whatsoever in your hash, you can use L<Any>!
+
+  my %h{Any};
+  %h{(now)} = "This is an Instant";
+  %h{(DateTime.now)} = "This is a DateTime, which is not an Instant";
+  %h{"completely different"} = "Monty Python references are neither DateTimes nor Instants";
+
+There is a more concise syntax which uses binding.
+
+  my %h := :{ (now) => "Instant", (DateTime.now) => "DateTime" }
+
+The binding is necessary because an object hash is about very solid, specific objects,
+which is something that binding is great at keeping track of but which assignment doesn't
+concern itself much.
 
 =head1 Methods
 
