--- a/Type/Grammar.pod
+++ b/Type/Grammar.pod
@@ -29,7 +29,7 @@ More L<documentation on grammars|/language/grammars> is available.
 
 Defined as:
 
-    method parse($target, :$rule = 'TOP',  Parcel :$args = (), Mu :$actions = Mu, *%opt) {
+    method parse($target, :$rule = 'TOP',  Capture() :$args = \(), Mu :$actions = Mu, *%opt) {
 
 Usage:
 
@@ -108,7 +108,7 @@ This outputs:
 
 Defined as:
 
-    method subparse($target, :$rule = 'TOP', Parcel :$args = (),  Mu :$actions = Mu, *%opt) {
+    method subparse($target, :$rule = 'TOP', Capture() :$args = \(),  Mu :$actions = Mu, *%opt) {
 
 Usage:
 
