--- a/Type/Positional.pod
+++ b/Type/Positional.pod
@@ -8,7 +8,7 @@
 
 Role for objects which support indexing them using C<postcircumfix:«[ ]»>
 (usually list-like objects).  Example types with Positional role
-include L<Parcel>, L<List>, L<Array>, L<Range>, and L<Buf>.
+include L<List>, L<Array>, L<Range>, and L<Buf>.
 
 =head1 Methods
 
