--- a/Type/Metamodel/ClassHOW.pod
+++ b/Type/Metamodel/ClassHOW.pod
@@ -62,7 +62,7 @@ method C<FALLBACK> instead.
 
     method can(Metamodel::ClassHOW:D: $obj, $method-name)
 
-Given a method names, it returns a L<Parcel> of methods that are available
+Given a method names, it returns a L<List> of methods that are available
 with this name.
 
     class A      { method x($a) {} };
