Small fixes to Hash docs

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -134,7 +134,7 @@ The whole point of object hashes is to keep keys as objects-in-themselves.
 Currently object hashes utilize the L<WHICH> method of an object, which returns a
 unique identifier for every mutable object. This is the keystone upon which the object
 identity operator (L<===>) rests. Order and containers really matter here as the order of
-C<.keys> is undefined nor is one anonymous list ever L<===> to another.
+C<.keys> is undefined and one anonymous list is never L<===> to another.
 
   > ($first-instant, $second-instant) ~~ %intervals.keys
   False
@@ -161,7 +161,7 @@ There is a more concise syntax which uses binding.
   my %h := :{ (now) => "Instant", (DateTime.now) => "DateTime" }
 
 The binding is necessary because an object hash is about very solid, specific objects,
-which is something that binding is great at keeping track of but which assignment doesn't
+which is something that binding is great at keeping track of but about which assignment doesn't
 concern itself much.
 
 =head1 Methods
