Document behavior of when statement modifier.

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -394,7 +394,14 @@ as though the rest of the statements in the block are skipped.
     }
     # The above block evaluates to 43
 
-A C<when> statement will also do this.
+A C<when> statement will also do this (but a C<when> statement modifier
+will I<not>.)
+
+    given 42 {
+        "This says".say when 42;      # just a prettier 'if $_ ~~ Int'
+        when Int { "This also says".say };
+        "This never says".say;
+    }
 
 In addition, C<when> statements C<smartmatch> the topic (C<$_>) against
 a supplied expression such that it is possible to check against values,
