Only match strings ending in .p6

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -185,11 +185,11 @@ A lazy way to find the first three files ending in ".p6" recursively starting fr
     my @stack = '.';
     my $perl-files := gather while ( @stack ) {
         my $current = @stack.pop;
-        take $current if ($current.IO.f && $current.IO.extension ~~ rx:i/p6$/);
+        take $current if ($current.IO.f && $current.IO.extension ~~ rx:i/ '.p6' $/);
         @stack.append(dir($current)>>.path) if $current.IO.d;
     }
-    
-    
+
+
     say $perl-files[1..3];
 
 
