--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -219,7 +219,7 @@ a class; you could even have some of the attributes come from roles or have them
 inherited from another class. Of course, methods are completely fine too. Go wild!
 
 CStruct objects are passed to native functions by reference and native functions 
-must also by return CStruct objects by reference as well. The memory management 
+must also return CStruct objects by reference. The memory management 
 rules for these references are very much like the rules for arrays, though simpler 
 since a struct is never resized. When you create a struct, the memory is managed for 
 you and when the variable(s) pointing to the instance of a CStruct go away, the memory 
