Start control.pod out with statements for the truly new users.

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -4,6 +4,23 @@
 
 =SUBTITLE Statements used to control the flow of execution
 
+=head2 X<statements|control flow>
+
+Perl 6 programs consists of one or more statements.  Simple statements
+are separated by semicolons.  The following program will say "Hello"
+and then say "World" on the next line.
+
+    say "Hello";
+    say "World";
+
+In most places where spaces appear in a statement, and before the
+semicolon, it may be split up over many lines.  Also, multiple statements
+may appear on the same line.  It would be awkward, but the above could
+also be written as:
+
+    say
+    "Hello"; say "World";
+
 =head2 X<blocks|control flow>
 
 Like many languages, Perl6 uses C<blocks> delimited by C<{> and C<}>
